# Project_SIMILI

./: .gitignore  Blablabla.json  CMakeLists.txt  CMakePresets.json  Journal de Developpement.docx  Test.json  UML.drawio  build_simili.bat  build_ui.bat  deploy_ui.bat  download_cef.bat  generate_ui_cmake.bat  how_to_run_unit_test.txt  imgui.ini  install_boost.bat  install_openssl.bat  install_vcpkg.bat  packages.txt  run  run.cmd  run_test.bat  scene.json
src/: main.cpp  pch.hpp
src/Engine/: ErrorBox.cpp  ErrorBox.hpp  Guizmo.cpp  Guizmo.hpp  MeshBatch.hpp  OpenGLContext.cpp  OpenGLContext.hpp  SimiliSelector.cpp  SimiliSelector.hpp  ThreeDObjectSelector.cpp  ThreeDObjectSelector.hpp  ThreeDScene.cpp  ThreeDScene.hpp  ThreeDSceneDrawer.cpp  ThreeDSceneDrawer.hpp  ThreeDWorldView.hpp  ThreeDWorldview.cpp  ipc_server.hpp  ui_process_manager.cpp  ui_process_manager.hpp
src/Engine/MeshEdit/: CutQuad.cpp  CutQuad.hpp  EdgeLoop.cpp  EdgeLoop.hpp  ExtrudeFace.cpp  ExtrudeFace.hpp
src/Engine/PrimitivesCreation/: CreatePrimitive.cpp  CreatePrimitive.hpp
src/Engine/SaveLoadSystem/: Save_Scene.cpp  Save_Scene.hpp
src/Engine/ThreeDInteractions/: EdgeTransform.cpp  EdgeTransform.hpp  FaceTransform.cpp  FaceTransform.hpp  MeshTransform.cpp  MeshTransform.hpp  VerticeTransform.cpp  VerticeTransform.hpp
src/Engine/ThreeDScene_DNA/: ThreeDScene_DNA.cpp  ThreeDScene_DNA.hpp
src/InternalLogic/: AssemblerLogic.hpp
src/SIMILI_Frontend/UI_Engine/: CMakeLists.txt  main_ui.cpp  message_handler.hpp  overlay_viewport.cpp  overlay_viewport.hpp  simple_browser_view_delegate.cpp  simple_window_delegate.cpp  ui_app.cpp  ui_app.hpp  ui_handler.cpp  ui_handler.hpp
src/SIMILI_Frontend/UI_Engine/viewportLogic/: CameraControl.cpp  HtmlTextureRenderer.cpp  HtmlTextureRenderer.hpp  OverlayClickHandler.cpp  OverlayClickHandler.hpp  RaycastPerform.cpp  RaycastPerform.hpp  TextureRendererTest.cpp  TextureRendererTest.hpp  cameraControl.hpp  overlay_viewport.cpp  overlay_viewport.hpp
src/SIMILI_Services/middleware/: ConsoleLogger.cpp  ConsoleLogger.hpp  ContextRegistry.cpp  ContextRegistry.hpp  HttpListener.cpp  HttpListener.hpp  HttpSession.cpp  HttpSession.hpp  SimpleHttpServer.cpp  SimpleHttpServer.hpp
src/SIMILI_Services/router/: RouterExample.cpp  RouterSim.cpp  RouterSim.hpp
src/SIMILI_Services/types/: RouterTypes.hpp
src/SIMILI_UI/: CMakeLists.txt  README.md  borderless_window.hpp  ipc_client.cpp  ipc_client.hpp  main_ui.cpp  message_handler.cpp  simple_browser_view_delegate.hpp  simple_window_delegate.cpp  simple_window_delegate.hpp  ui_app.cpp  ui_app.hpp  ui_handler.cpp  ui_handler.hpp
src/SIMILI_UI/UI_Engine/: CMakeLists.txt  borderless_window.cpp  main_ui.cpp  message_handler.cpp  message_handler.hpp  overlay_viewport.cpp  overlay_viewport.hpp  simple_browser_view_delegate.cpp  simple_window_delegate.cpp  simple_window_delegate.hpp  ui_app.cpp  ui_app.hpp  ui_handler.cpp  ui_handler.hpp
src/UI/: ContextualMenu.cpp  ContextualMenu.hpp  DirectX12TestWindow.cpp  DirectX12TestWindow.hpp  DirectX12Window.hpp  GUIWindow.cpp  GUIWindow.hpp  GameWindow.cpp  GameWindow.hpp  HierarchyInspector.cpp  HierarchyInspector.hpp  InfoWindow.hpp  MainSoftwareGUI.cpp  MainSoftwareGUI.hpp  ObjectInspector.cpp  ObjectInspector.hpp  SimiliGizmo.cpp  SimiliGizmo.hpp  ThreeDWindow.cpp  ThreeDWindow.hpp  UiCreator.cpp  UiCreator.hpp  Uidocking.cpp  Uidocking.hpp
src/UI/ContextualMenu/: ContextualMenu.cpp  ContextualMenu.hpp
src/UI/EdgeLoopControl/: EdgeLoopControl.cpp  EdgeLoopControl.hpp
src/UI/EdgeLoopParameters/: EdgeLoopParameters.cpp  EdgeLoopParameters.hpp
src/UI/HierarchyInspectorLogic/: HandleHierarchyInteractions.cpp  HandleHierarchyInteractions.hpp  HierarchyInspector.cpp  HierarchyInspector.hpp  HierarchyListDrawing.cpp  HierarchyListDrawing.hpp
src/UI/HistoryLogic/: HistoryLogic.cpp  HistoryLogic.hpp
src/UI/ObjectInspectorLogic/: ObjectInspector.cpp  ObjectInspector.hpp
src/UI/OptionMenu/: OptionsMenu.cpp  OptionsMenu.hpp
src/UI/ThreeDModes/: Edge_Mode.cpp  Edge_Mode.hpp  Face_Mode.cpp  Face_Mode.hpp  Normal_Mode.cpp  Normal_Mode.hpp  ThreeDMode.cpp  ThreeDMode.hpp  Vertice_Mode.cpp  Vertice_Mode.hpp
src/UI/ThreeDWindow/: ClickHandler.cpp  ClickHandler.hpp  ThreeDWindow.cpp  ThreeDWindow.hpp
src/UI/UIdocking/: UiCreator.cpp  Uidocking.cpp
src/UnitTest/: CmakeLists.txt  Test_RewindExtrudeHistory.cpp
src/UnitTest/shims/: shim_ExtrudeFace_impl.cpp  shim_FaceTransform.cpp  shim_runtime_min.cpp
src/WorldObjects/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Edge.cpp  Edge.hpp  EmptyDummy.cpp  EmptyDummy.hpp  Face.cpp  Face.hpp  ThreeDObject.cpp  ThreeDObject.hpp  Vertice.cpp  Vertice.hpp
src/WorldObjects/Basic/: Edge.cpp  Edge.hpp  Face.cpp  Face.hpp  Ngon.cpp  Ngon.hpp  Quad.cpp  Quad.hpp  Triangle.cpp  Triangle.hpp  Vertice.cpp  Vertice.hpp
src/WorldObjects/Camera/: Camera.cpp  Camera.hpp
src/WorldObjects/Entities/: EmptyDummy.cpp  EmptyDummy.hpp  ThreeDObject.cpp  ThreeDObject.hpp
src/WorldObjects/Mesh/: Mesh.cpp  Mesh.hpp
src/WorldObjects/Mesh_DNA/: Mesh_DNA.cpp  Mesh_DNA.hpp
src/WorldObjects/Primitives/: Cube.cpp  Cube.hpp
src/resources/: default_imgui_layout.ini  my_custom_ui.ini
ui/: Mode_UI.html  Viewport_docking.html  console_server.css  console_server.html  console_server.js  hello_cef.html  hierarchy_inspector.html  history_logger.html  layout_resizer.js  main_layout.css  main_layout.html  main_layout_manager.js  object_inspector.html  object_list.html  project_viewer.css  project_viewer.html  ribbon_menu.css  test.html
